--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         class='bx bxl-gmail'></i></a>
                 <a href="https://github.com/Tech-Shark" target="_blank"><i class='bx bxl-github'></i></a>
             </div>
-            <a href="./CV.pdf" class="btn" target="_blank">Download Giorgi's CV</a>
+            <a href="CV.pdf" class="btn" target="_blank">Download Giorgi's CV</a>
         </div>
 
         <div class="home-img">
