Update3 index.html

--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
                 <img src="images/portfolio1.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Project N1</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Donec in lacus nulla. Nulla sit amet</p>
+                    <p>Coming Soon...</p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -111,8 +110,7 @@
                 <img src="images/portfolio2.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Project N2</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Donec in lacus nulla. Nulla sit amet</p>
+                    <p>Coming Soon...</p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -121,8 +119,7 @@
                 <img src="images/portfolio3.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Project N3</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Donec in lacus nulla. Nulla sit amet</p>
+                    <p>Coming Soon...t</p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -131,8 +128,7 @@
                 <img src="images/portfolio4.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Project N4</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Donec in lacus nulla. Nulla sit amet</p>
+                    <p>Coming Soon...</p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -141,8 +137,7 @@
                 <img src="images/portfolio5.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Project N5</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Donec in lacus nulla. Nulla sit amet</p>
+                    <p>Coming Soon...</p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -151,8 +146,7 @@
                 <img src="images/portfolio6.png" alt="">
                 <div class="portfolio-layer">
                     <h4>Project N6</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Donec in lacus nulla. Nulla sit amet</p>
+                    <p>Coming Soon...</p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
