--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a href="https://www.linkedin.com/in/giorgi-izoria/" target="_blank"><i class='bx bxl-linkedin'></i></a>
                 <a href="mailto:izoriagiorgi8@gmail.com?subject=Subject%20Line" target="_blank"><i
                         class='bx bxl-gmail'></i></a>
-                <a href="https://github.com/Tech-Shark" target="_blank"><i class='bx bxl-github'></i></a>
+                <a href="https://github.com/izoria1" target="_blank"><i class='bx bxl-github'></i></a>
             </div>
             <a href="CV.pdf" class="btn" target="_blank">Download Giorgi's CV</a>
         </div>
