--- a/index.html
+++ b/index.html
@@ -100,18 +100,25 @@
             <div class="portfolio-box">
                 <img src="images/portfolio1.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>Project N1</h4>
-                    <p>Coming Soon...</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <h4>Mama Mia's Restaurant App</h4>
+                    <p> Overview: Developed a comprehensive full-stack web application 
+                        for a fictional restaurant to digitalize customer interactions, 
+                        including menu exploration, registration, bookings, and reservation 
+                        management, showcasing a responsive design and user-friendly interface.
+                    </p>
+                    <a href="https://www.linkedin.com/in/giorgi-izoria/details/projects/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
             <div class="portfolio-box">
                 <img src="images/portfolio2.png" alt="">
                 <div class="portfolio-layer">
-                    <h4>Project N2</h4>
-                    <p>Coming Soon...</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <h4>Product Catalog</h4>
+                    <p> Overview: Engineered a full-stack web application to manage a dynamic 
+                        inventory of products, enabling the addition, listing, and deletion of 
+                        items, with a focus on scalability and user experience.  
+                    </p>
+                    <a href="https://www.linkedin.com/in/giorgi-izoria/details/projects/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
