--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="images/portfolio1.png" alt="">
+                <img src="images/Portfolio1.png" alt="Mama Mia's Restaurant App">
                 <div class="portfolio-layer">
                     <h4>Mama Mia's Restaurant App</h4>
                     <p> Overview: Developed a comprehensive full-stack web application 
@@ -111,7 +111,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio2.png" alt="">
+                <img src="images/Portfolio2.png" alt="Product Catalog">
                 <div class="portfolio-layer">
                     <h4>Product Catalog</h4>
                     <p> Overview: Engineered a full-stack web application to manage a dynamic 
