--- a/index.html
+++ b/index.html
@@ -102,11 +102,9 @@
                 <div class="portfolio-layer">
                     <h4>Mama Mia's Restaurant App</h4>
                     <p> Overview: Developed a comprehensive full-stack web application 
-                        for a fictional restaurant to digitalize customer interactions, 
-                        including menu exploration, registration, bookings, and reservation 
-                        management, showcasing a responsive design and user-friendly interface.
+                        for a fictional restaurant.
                     </p>
-                    <a href="https://www.linkedin.com/in/giorgi-izoria/details/projects/"><i class='bx bx-link-external'></i></a>
+                    <a href="https://www.linkedin.com/in/giorgi-izoria/details/projects/">LEARN MORE<i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -115,10 +113,9 @@
                 <div class="portfolio-layer">
                     <h4>Product Catalog</h4>
                     <p> Overview: Engineered a full-stack web application to manage a dynamic 
-                        inventory of products, enabling the addition, listing, and deletion of 
-                        items, with a focus on scalability and user experience.  
+                        inventory of products.
                     </p>
-                    <a href="https://www.linkedin.com/in/giorgi-izoria/details/projects/"><i class='bx bx-link-external'></i></a>
+                    <a href="https://www.linkedin.com/in/giorgi-izoria/details/projects/">LEARN MORE<i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
