--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <p> Overview: Developed a comprehensive full-stack web application 
                         for a fictional restaurant.
                     </p>
-                    <a href="https://www.linkedin.com/in/giorgi-izoria/details/projects/">LEARN MORE<i class='bx bx-link-external'></i></a>
+                    <a href="https://www.linkedin.com/in/giorgi-izoria/details/projects/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -115,7 +115,7 @@
                     <p> Overview: Engineered a full-stack web application to manage a dynamic 
                         inventory of products.
                     </p>
-                    <a href="https://www.linkedin.com/in/giorgi-izoria/details/projects/">LEARN MORE<i class='bx bx-link-external'></i></a>
+                    <a href="https://www.linkedin.com/in/giorgi-izoria/details/projects/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
