--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="services-box">
                 <i class="bx bxs-server"></i>
                 <h3>Backend Services</h3>
-                <p>On the backend, I excel in Python, SQL, and Django. I specialize in building robust server-side
+                <p>On the backend, I excel in Python (Django), PHP and SQL. I specialize in building robust server-side
                     solutions, from API development to database management and intricate business logic implementation.
                     Let's supercharge your web projects!</p>
             </div>
