--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
             <a href="#services">Services</a>
-            <a href="#portfolio">Portfolio</a>
+            <a href="#portfolio">My Projects</a>
             <a href="#contact">Contact</a>
         </nav>
 
@@ -46,7 +46,7 @@
                         class='bx bxl-gmail'></i></a>
                 <a href="https://github.com/izoria1" target="_blank"><i class='bx bxl-github'></i></a>
             </div>
-            <a href="CV.pdf" class="btn" target="_blank">Download Giorgi's Resume</a>
+            <a href="resume.pdf" class="btn" target="_blank">Download Giorgi's Resume</a>
         </div>
 
         <div class="home-img">
@@ -100,7 +100,7 @@
             <div class="portfolio-box">
                 <img src="images/Portfolio1.png" alt="Mama Mia's Restaurant App">
                 <div class="portfolio-layer">
-                    <h4>Mama Mia's Restaurant App</h4>
+                    <h4>Restaurant App</h4>
                     <p> Overview: Developed a comprehensive full-stack web application 
                         for a fictional restaurant.
                     </p>
@@ -120,40 +120,16 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio3.png" alt="">
+                <img src="images/Portfolio3.png" alt="Portfolio Website">
                 <div class="portfolio-layer">
-                    <h4>Project N3</h4>
-                    <p>Coming Soon...t</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <h4>Portfolio Website</h4>
+                    <p> Overview: Designed a personal portfolio site showcasing projects, skills, and contact details.
+                    </p>
+                    <a href="https://www.linkedin.com/in/giorgi-izoria/details/projects/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
-            <div class="portfolio-box">
-                <img src="images/portfolio4.png" alt="">
-                <div class="portfolio-layer">
-                    <h4>Project N4</h4>
-                    <p>Coming Soon...</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="images/portfolio5.png" alt="">
-                <div class="portfolio-layer">
-                    <h4>Project N5</h4>
-                    <p>Coming Soon...</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-
-            <div class="portfolio-box">
-                <img src="images/portfolio6.png" alt="">
-                <div class="portfolio-layer">
-                    <h4>Project N6</h4>
-                    <p>Coming Soon...</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
+            
         </div>
     </section>
 
